# TradeMiddleware

./: .env  .replit  50tradesxml.xml  Pasted-2024-09-22-12-27-54-987-DEBUG-Processed-trade-data-trade-id-1048-symbol-BYND-quan-1727008144547.txt  Pasted-2024-09-22-20-21-22-376-INFO-Database-configuration-loaded-successfully-2024-09-22-20-21-22-376--1727036587400.txt  Pasted-2024-09-23-17-12-23-270-INFO-Database-connection-successful-Serving-Flask-app-app-Debug--1727111562177.txt  Pasted-Environment-updated-Reloading-shell-2024-09-22-20-39-57-698-INFO-Database-connection-success-1727037730401.txt  Pasted-INFO-alembic-runtime-migration-Context-impl-PostgresqlImpl-INFO-alembic-runtime-migration-Wil-1727362466757.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-bee-1727004590036.txt  Pasted-OperationalError-sqlalchemy-exc-OperationalError-psycopg2-OperationalError-SSL-connection-has-bee-1727097480869.txt  Pasted-ProgrammingError-sqlalchemy-exc-ProgrammingError-psycopg2-errors-UndefinedColumn-column-audit-log-1727031076773.txt  Pasted-uild-a-Middleware-Application-for-Stock-Trade-Data-Transmission-with-Django-and-React-Objective-C-1726916215076.txt  README.md  app.py  app.yaml  check_audit_log_columns.py  cloudbuild.yaml  config.py  models.py  pyproject.toml  replit.nix  requirements.txt  sample_trades.xml  test_api_simulation.py  trigger.yaml  utils.py
static/css/: style.css
templates/: 404.html  500.html  audit_trail.html  base.html  dashboard.html  login.html  register.html
uploads/: processing_log_1727031674.txt  (+7 more)
(+30 files in other folders)
