[tool.poetry]
name = "repl-nix-stocktrademiddlewareapp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
flask-sqlalchemy = "^3.1.1"
flask-login = "^0.6.3"
pandas = "^2.2.3"
werkzeug = "^3.0.4"
psycopg2-binary = "^2.9.9"
lxml = "^5.3.0"
flask-migrate = "^4.0.7"
requests = "^2.32.3"
flask-socketio = "^5.3.7"
aiohttp = "^3.10.5"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
